--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-        <title>Clase 1</title>
+        <title>Fundamentos JS</title>
     </head>
     <body>
-        <script src="clase1-var.js"></script>
+        <script src="clase2-string.js"></script>
     </body>
 </html>
