--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Fundamentos JS</title>
     </head>
     <body>
-        <script src="clase2-string.js"></script>
+        <script src="clase3-numeros.js"></script>
     </body>
 </html>
