--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Fundamentos JS</title>
     </head>
     <body>
-        <script src="clase5-scope.js"></script>
+        <script src="clase6-objetos.js"></script>
     </body>
 </html>
