--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Fundamentos JS</title>
     </head>
     <body>
-        <script src="clase8-parametroReferenciaYValor.js"></script>
+        <script src="clase9-comparaciones.js"></script>
     </body>
 </html>
