Funciones que retornan

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Fundamentos JS</title>
     </head>
     <body>
-        <script src="clase10-condicionales.js"></script>
+        <script src="clase11-func-que-retornan.js"></script>
     </body>
 </html>
