--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Fundamentos JS</title>
     </head>
     <body>
-        <script src="clase12-arrow-functions.js"></script>
+        <script src="clase13-ciclos-for.js"></script>
     </body>
 </html>
