--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Fundamentos JS</title>
     </head>
     <body>
-        <script src="clase16-switch.js"></script>
+        <script src="clase17-arrays-intro.js"></script>
     </body>
 </html>
