Funcion map para arrays.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Fundamentos JS</title>
     </head>
     <body>
-        <script src="clase18-arrays-filtros.js"></script>
+        <script src="clase19-map.js"></script>
     </body>
 </html>
