--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Fundamentos JS</title>
     </head>
     <body>
-        <script src="clase19-map.js"></script>
+        <script src="clase20-reduce-arrays.js"></script>
     </body>
 </html>
