Tiempos de ejecucion en JS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Fundamentos JS</title>
     </head>
     <body>
-        <script src="clase26-func-como-param.js"></script>
+        <script src="clase28-tiempo-js.js"></script>
     </body>
 </html>
