--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Fundamentos JS</title>
     </head>
     <body>
-        <script src="clase28-tiempo-js.js"></script>
+        <script src="clase29-callbacks.js"></script>
     </body>
 </html>
