--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <title>Fundamentos JS</title>
     </head>
     <body>
+        <script
+            src="https://code.jquery.com/jquery-3.4.0.min.js"
+            integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
+            crossorigin="anonymous"></script>
         <script src="clase29-callbacks.js"></script>
     </body>
 </html>
