--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
             src="https://code.jquery.com/jquery-3.4.0.min.js"
             integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
             crossorigin="anonymous"></script>
-        <script src="clase29-callbacks.js"></script>
+        <script src="clase30-multiple-peticiones.js"></script>
     </body>
 </html>
