--- a/index-game.html
+++ b/index-game.html
@@ -13,6 +13,7 @@
       display: flex;
       align-items: center;
       height: 100vh;
+      font-family: Arial, Helvetica, sans-serif;
     }
     .gameboard {
       height: 100vh;
@@ -80,6 +81,8 @@
       <div id="verde" class="color verde right" data-color="verde"></div>
       <button id="btnEmpezar" class="btn-start" onclick="empezarJuego()">Empezar a jugar!</button>
     </div>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="game.js"></script>
+    
 </body>
 </html>
