--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@
     .btn-start {
       width: 400px;
       height: 100px;
-      background: #ecf0f1;
-      color: #2c3e50;
+      background: rgba(0, 0, 0, 0.9);
+      color: white;
+      border-radius: 1em;
+      border: solid;
       font-size: 2.5rem;
       position: absolute;
       top: calc(50% + 20px);
