--- a/index-complementos.html
+++ b/index-complementos.html
@@ -4,6 +4,6 @@
         <title>Fundamentos JS</title>
     </head>
     <body>
-        <script src="comp2-fechas.js"></script>
+        <script src="comp3-recursividad.js"></script>
     </body>
 </html> 
