Uso de punto y coma

--- a/index-complementos.html
+++ b/index-complementos.html
@@ -4,6 +4,6 @@
         <title>Fundamentos JS</title>
     </head>
     <body>
-        <script src="comp6-datos-inmutables.js"></script>
+        <script src="comp8-puntoycoma.js"></script>
     </body>
 </html> 
